ajouter le logo SWB

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<img src="images/swb_logo.jpg">
+		<h1>comming soon ...</h1>
 	</body>
 </html>
