--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<img src="images/swb_logo.jpg">
-		<h1>comming soon ...</h1>
+		<div id="container">
+			<img id="logo" src="images/swb_logo.jpg">
+			<h1>comming soon ...</h1>
+		</div>
 	</body>
 </html>
