--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<div id="container">
 			<img id="logo" src="images/swb_logo.jpg">
-			<h1>comming soon ... mais pas tout de suite</h1>
+			<h1>comming soon ... mais pas tout de suite avec un branch cette fois</h1>
 		</div>
 	</body>
 </html>
