--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>--- TODO ---</title>
+    <title>--- Swissboogie ---</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
@@ -18,8 +18,9 @@
     <![endif]-->
   </head>
   <body>
+  <div class="separateur"></div>
 	<div id="container">
-		<img id="logo" src="images/swb_logo.jpg">
+		<img id="logo" src="images/swb_logo.png">
 		<h1>comming soon ... mais pas tout de suite avec un branch cette fois</h1>
 	</div>
     <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
